src/objects/BDI_Field_Mapping__mdt.object
<CustomObject>
    <description>Batch Data Import takes a single NPSP Data Import record and translates it into multiple records (Contacts, Accounts, Opportunity, Payment, etc.). It does this by mapping fields from the Source Field to the Target Field.</description>
    <fields>
        <fullName>SourceFieldEntity__c</fullName>
        <label>Source Field Entity</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>BDI Field Target Entities</relationshipLabel>
        <relationshipName>BDIFieldTargetEntities</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>BDI_Field_Mapping__mdt.SourceFieldEntity__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>BDI Field Sources</relationshipLabel>
        <relationshipName>BDIFieldSources</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TargetFieldEntity__c</fullName>
        <label>Target Field Entity</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>BDI Target Entities</relationshipLabel>
        <relationshipName>BDITargetEntities</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>TargetField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BDI Field Mapping</label>
    <pluralLabel>BDI Field Mappings</pluralLabel>
</CustomObject>